Flyttet Kafka-modulen fra amt-lib til amt-felles